mlflow/mlflow-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mlflow-server
  name: mlflow-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mlflow-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: mlflow-server
    spec:
      containers:
        - args:
            - bash
            - -c
            - pip install mlflow boto3 psycopg2-binary && mlflow server --serve-artifacts --host 0.0.0.0 --backend-store-uri postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@mlflow-db:5436/mlflowdb --default-artifact-root s3://mlflow-bucket/ --app-name basic-auth
          image: python:3.9.15-slim
          name: mlflow-server
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
