mlflow/mlflow-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mlflow-server
  name: mlflow-server
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: mlflow-server
      nodePort: 30007
  selector:
    io.kompose.service: mlflow-server
status:
  loadBalancer: {}
