mlflow/model_deployment_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-deployment-service
  namespace: mlflow
  annotations:
    metallb.universe.tf/address-pool: sdf-services
spec:
  type: LoadBalancer
  ports:
  - port: 5075
    targetPort: 5075
    protocol: TCP
    name: mlflow-model-deployment
  selector:
    service_type: model_deployment
