mlflow/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ui
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "71.198.255.25,134.79.0.0/16,172.16.0.0/12"
spec:
  rules:
  - host: "ard-mlflow.slac.stanford.edu"
    http:
      paths:
      - pathType: Prefix
        path: "/minio/"
        backend:
          service:
            name: minio
            port:
              number: 9021
