mlflow/mlflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ui
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "71.198.255.25,134.79.0.0/16,172.16.0.0/12,208.45.173.162,216.46.165.69"
spec:
  rules:
  - host: "ard-mlflow.slac.stanford.edu"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mlflow-server
            port:
              number: 5000
